# nxt_minotaur

./: Doxyfile  compile  start  start.sh  start_beagle.sh  start_mapteleop.sh  start_mouse_monitor_beagle.sh  start_mouse_monitor_qt.sh  start_movebase.sh  start_qt.sh  start_teleop.sh
src/map_monitor_pc/: CMakeLists.txt  package.xml
src/map_monitor_pc/include/map_monitor_pc/: MapWindow.hpp
src/map_monitor_pc/launch/: mapteleop.launch
src/map_monitor_pc/src/map_monitor_pc/: MapWindow.cpp  QMapTeleop.cpp  QMapWidget.cpp
src/minotaur_common/: CMakeLists.txt  package.xml
src/minotaur_common/include/minotaur_common/: BlockingQueue.hpp  IMinotaurListener.hpp  Math.hpp  MazeSettings.hpp  MedianFilter.hpp  MinotaurControlNode.hpp  MinotaurParam.hpp  MinotaurTopics.hpp  MotorVelocity.hpp  MouseSensorSettings.hpp  RAIILock.hpp  RobotSettings.hpp  RobotVelocity.hpp  SensorSettings.hpp  Thread.hpp  Vector2.hpp
src/minotaur_common/param/: models.yaml
src/minotaur_common/src/minotaur_common/: Math.cpp  MazeSettings.cpp  MedianFilter.cpp  MinotaurControlNode.cpp  MotorVelocity.cpp  MouseSensorSettings.cpp  RobotSettings.cpp  SensorSettings.cpp  Thread.cpp  Vector2.cpp
src/minotaur_common_qt/: CMakeLists.txt  package.xml
src/minotaur_common_qt/include/minotaur_common_qt/: MetaTypes.hpp  QMinotaurControlNode.hpp  QMinotaurControlThread.hpp
src/minotaur_common_qt/src/minotaur_common_qt/: MetaTypes.cpp  QMinotaurControlNode.cpp  QMinotaurControlThread.cpp
src/minotaur_control_pc/: CMakeLists.txt  package.xml
src/minotaur_control_pc/include/minotaur_control_pc/: IMinotaurListener.h  IMinotaurListener.hpp  MinotaurControlNode.h  MinotaurControlNode.hpp  SensorSetting.h  SensorSetting.hpp  SensorSettings.hpp
src/minotaur_control_pc/src/minotaur_control_pc/: MinotaurControlNode.cpp  SensorSettings.cpp
src/minotaur_map/: CMakeLists.txt  package.xml
src/minotaur_map/include/minotaur_map/: BugZeroAlgorithm.hpp  Map.hpp  MapCreator.hpp  MinotaurCommunicator.hpp  Movement.hpp  MovementAlgorithm.hpp  MovementAlgorithmSensor.hpp  NavigationThread.hpp  Vec2.hpp  (+5 more)
src/minotaur_map/launch/: teleop.launch
src/minotaur_maze/: CMakeLists.txt  package.xml
src/minotaur_maze/launch/: local_solver.launch
src/minotaur_maze/param/: mazes.yaml
src/minotaur_maze_pc/: CMakeLists.txt  package.xml
src/minotaur_maze_pc/launch/: local_solver.launch
src/minotaur_maze_pc/param/: mazes.yaml
src/minotaur_pc/: CMakeLists.txt  package.xml
src/minotaur_pc/config_headers/: Config.hpp.in
src/minotaur_pc/launch/: bug.launch  teleop.launch
src/minotaur_pc/src/: BugZeroAlgorithm.cpp  DeadReckoning.cpp  MapCreator.cpp  MinotaurCommunicator.cpp  MinotaurState.cpp  MinotaurThread.cpp  MovementAlgorithm.cpp  MovementAlgorithmSensor.cpp  NavigationThread.cpp  PledgeAlgorithm.cpp  RobotOdometry.cpp  SensorThread.cpp  example_source.cpp
src/minotaur_teleop/: CMakeLists.txt  package.xml
src/minotaur_teleop/launch/: joy_teleop.launch  keyboard_teleop.launch
src/minotaur_teleop/src/: joy_teleop.cpp  keyboard_teleop.cpp
src/mouse_monitor_beagle/: CMakeLists.txt  package.xml
src/mouse_monitor_beagle/launch/: mousemonitor.launch
src/mouse_monitor_beagle/msg/: MouseMonitorSensorSettings.msg
src/mouse_monitor_beagle/srv/: MouseMonitorSensorGetData.srv  MouseMonitorSensorGetSettings.srv  MouseMonitorSensorSetResolution.srv
src/mouse_monitor_pc/: CMakeLists.txt  package.xml
src/mouse_monitor_pc/launch/: mousemonitor.launch
src/mouse_monitor_pc/resources/: res.qrc
src/mouse_monitor_pc/ui/: mousemonitor_logDialog.ui  mousemonitor_medianFilterDialog.ui  mousemonitor_sensorCalibration.ui  mousemonitor_window.ui
src/nxt_beagle/: CMakeLists.txt  README.md  package.xml
src/nxt_beagle/MotorControl/: MotorVelocity.cpp  PIDController.cpp  RobotController.cpp  SensorController.cpp  SensorThreading.cpp
src/nxt_beagle/MouseMonitor/: MouseMonitor.cpp  MouseMonitorNodeBeagle.cpp
src/nxt_beagle/MouseSensor/: mouseNodeBeagle.cpp
src/nxt_beagle/NxtControl/: Brick.cpp  Motor.cpp  NxtExceptions.cpp  NxtTelegram.cpp  Telegram.cpp  USBSocket.cpp  UltrasonicSensor.cpp
src/nxt_beagle/RobotControl/: Models.yaml  RobotCommunicator.cpp  RobotControl.cpp  SensorCommunicator.cpp
src/nxt_beagle/config_headers/: Config.hpp.in
src/nxt_beagle/global/: Config.hpp.in
src/nxt_beagle/launch/: control.launch  mousemonitor.launch  move_base.launch
src/nxt_beagle/motorControl/: IPIDController.hpp  MotorVelocity.cpp  PIDController.cpp
src/nxt_beagle/msg/: DebugMouseData.msg  MVelocity.msg  MouseMonitorSensorData.msg  MouseMonitorSensorSettings.msg  RVelocity.msg  SamplingInterval.msg  UltraSensor.msg
src/nxt_beagle/nxtControl/: README.md  nxtBrick.py  nxtBrickControl.py
src/nxt_beagle/srv/: nxtTicks.srv  nxtUltrasonic.srv
src/nxt_minotaur/: CMakeLists.txt  package.xml
src/nxt_minotaur/motorControl/: IPIDController.hpp  MotorVelocity.hpp  PIDController.cpp  PIDController.hpp
src/nxt_minotaur/msg/: nxtPower.msg
src/nxt_minotaur/nxtControl/: README.md  nxtBrick.py  nxtBrickControl.py
src/nxt_minotaur/srv/: nxtAddUltrasonic.srv  nxtUltrasonic.srv
src/nxt_qt/: CMakeLists.txt  package.xml
src/nxt_qt/MouseGUI/: QMouseNode.cpp  mainwindow.cpp
src/nxt_qt/launch/: mapteleop.launch  mousemonitor.launch  pidcontrol.launch
src/nxt_qt/src/: MapWindow.cpp  MouseMonitor.cpp  MouseMonitorDirectionWidget.cpp  MouseMonitorNode.cpp  MouseMonitorPlot.cpp  MouseMonitorTrackPathWidget.cpp  MouseMonitorWindow.cpp  PIDWindow.cpp  QMapWidget.cpp  QMinotaurNavigateNode.cpp  QPIDNode.cpp  QSensorPainter.cpp  main.cpp
src/nxt_qt/ui/: mainwindow_debug.ui  mousemonitor_window.ui  pid_window.ui
src/pid_monitor/: CMakeLists.txt  package.xml
src/pid_monitor/launch/: pidcontrol.launch
src/pid_monitor/ui/: pid_window.ui
src/pid_monitor_pc/: CMakeLists.txt  package.xml
src/pid_monitor_pc/launch/: pidcontrol.launch
src/robot_control/: CMakeLists.txt  package.xml
src/robot_control/launch/: control.launch  move_base.launch
src/robot_control/param/: common_costmap.yaml  global_costmap.yaml  local_planner.yaml
(+322 files in other folders)
