<?xml version="1.0"?>
<package>
  <name>minotaur_common_qt</name>
  <version>1.0.0</version>
  <description>The minotaur_common_qt package</description>

  <maintainer email="fabian@todo.todo">fabian</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>minotaur_common</build_depend>
  
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>

</package>
