<?xml version="1.0"?>
<package>
    <name>minotaur_maze</name>
    <version>1.0.0</version>
    <description>The minotaur_maze package</description>
    
    <maintainer email="fameyer@htwg-konstanz.de">Fabian Meyer</maintainer>
    
    <license>TODO</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>minotaur_common</build_depend>
    
    <run_depend>message_runtime</run_depend>
    <run_depend>roscpp</run_depend>
    
</package>
