<?xml version="1.0"?>
<package>
  <name>minotaur_pc</name>
  <version>0.0.0</version>
  <description>The minotaur_pc package</description>

  <maintainer email="fameyer@htwg-konstanz.de">Fabian Meyer</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nxt_beagle</build_depend>
  <run_depend>message_runtime</run_depend>
  
</package>