<?xml version="1.0"?>
<package>
    <name>mouse_monitor_beagle</name>
    <version>0.0.0</version>
    <description>The mouse_monitor_beagle package</description>
    
    <maintainer email="fabian@todo.todo">fabian</maintainer>
    
    <license>TODO</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    
    <build_depend>message_generation</build_depend>
    <build_depend>roscpp</build_depend>
    
    <run_depend>message_runtime</run_depend>
    <run_depend>roscpp</run_depend>
</package>