<?xml version="1.0"?>
<package>
    <name>nxt_beagle</name>
    <version>0.0.0</version>
    <description>Package that contains nodes for the Beagle Bone Black</description>

    <maintainer email="fameyer@htwg-konstanz.de">Fabian Meyer</maintainer>

    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TODO</license>

    <author email="fameyer@htwg-konstanz.de">Fabian Meyer</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <run_depend>message_runtime</run_depend>
    <build_depend>tf</build_depend>
    <run_depend>tf</run_depend>
    

    <!-- The export tag contains other, unspecified, tags -->
    <export>

    </export>
</package>