<?xml version="1.0"?>
<package>
  <name>pid_monitor_pc</name>
  <version>0.0.0</version>
  <description>The pid_monitor_pc package</description>
  <maintainer email="robolab@todo.todo">robolab</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>robot_control_beagle</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>

</package>
